@@ -1,6 +1,12 @@
 2010-02-23  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php, scorerender-admin.php:
+	- Drop CACHE_URL setting completely, now cached images are not accessed
+	  directly via URL.
+	  
+2010-02-23  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php, scorerender-admin.php:
 	- Now CACHE_DIR and CACHE_URL settings can be empty.
 	- Unanimously use scorerender_get_cache_location() to get cache image
 	  folder.
